--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
     <title>Portfolio - Audrey Gaborit</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio de Audrey Gaborit, développeuse web. Découvrez mes projets, compétences et parcours.">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://audreygaborit.fr/">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="fr_FR">
-    <meta property="og:site_name" content="Portfolio Audrey Gaborit">
-    <meta property="og:title" content="Portfolio - Audrey Gaborit">
-    <meta property="og:description" content="Portfolio de Audrey Gaborit, développeuse web. Découvrez mes projets, compétences et parcours.">
-    <meta property="og:url" content="https://audreygaborit.fr/">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio de Audrey Gaborit, développeuse web. Découvrez mes projets, compétences et parcours."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://audreygaborit.fr/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:site_name" content="Portfolio Audrey Gaborit" />
+    <meta property="og:title" content="Portfolio - Audrey Gaborit" />
+    <meta
+      property="og:description"
+      content="Portfolio de Audrey Gaborit, développeuse web. Découvrez mes projets, compétences et parcours."
+    />
+    <meta property="og:url" content="https://audreygaborit.fr/" />
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet" />
+    <!-- FontAwesome -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js"
+      data-auto-replace-svg="nest"
+    ></script>
+    <!-- Material Symbols -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="flex flex-1 flex-col h-full items-center p-4"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
