--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     />
   </head>
   <body>
-    <div id="app" class="flex flex-1 flex-col h-full items-center p-4"></div>
+    <div id="app" class="h-screen flex flex-col items-center p-4"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
